# Mushroom-Identifier

./: .gitattributes  README.md
Android/: readme.md
Android/CameraApp/: local.properties
Android/CameraApp/app/: CMakeLists.txt  build.gradle  standalonecmake.cmd
Android/CameraApp/app/libiconv/: config.h  config.status  libtool
Android/CameraApp/app/libiconv/lib/: Makefile
Android/CameraApp/app/libiconv/libcharset/: config.status  libtool
Android/CameraApp/app/libiconv/libcharset/lib/: Makefile  libcharset.la
Android/CameraApp/app/libiconv/po/: Makefile  Makefile.in
Android/CameraApp/app/libiconv/preload/: Makefile  config.status  libtool
Android/CameraApp/app/libiconv/src/: Makefile  iconv.res
Android/CameraApp/app/libiconv/src/.libs/: iconv_ltshwrapper  iconv_no_i18n_ltshwrapper  lt-iconv.c  lt-iconv_no_i18n.c
Android/CameraApp/app/libiconv/srclib/: Makefile  signal.h  stdio.h
Android/CameraApp/app/src/androidTest/java/com/firstapp/hakan/cameraapp/: ApplicationTest.java
Android/CameraApp/app/src/main/: AndroidManifest.xml
Android/CameraApp/app/src/main/cpp/: native-lib.cpp
Android/CameraApp/app/src/main/includes/: android_util.cpp  main.cpp  myconvert.cpp  myconvert.hpp
Android/CameraApp/app/src/main/java/com/firstapp/hakan/cameraapp/: DisplayListActivity.java  MainActivity.java  Mushroom.java  Pilz.java  XMLPullParserHandler.java  showSelectedPilzActivity.java
Android/CameraApp/app/src/main/jni/: Android.mk  Application.mk  com_firstapp_hakan_cameraapp_Mushroom.h
Android/CameraApp/app/src/main/openCV/: Markup.cpp  Source.cpp  schwammerl.xml
Android/CameraApp/app/src/main/res/layout/: activity_display_list.xml  activity_main.xml  activity_show_selected_pilz.xml  list_item.xml
Android/CameraApp/app/src/main/res/values/: strings.xml
Android/CameraApp/app/src/main/res/xml/: schwammerl.xml
Android/CameraApp/app/src/test/java/com/firstapp/hakan/cameraapp/: ExampleUnitTest.java
Android/scripts/: androidstudio.cmd  env.cmd  findjavahome.cmd  maketoolchain.cmd  opencvbuild.cmd  shell.cmd
Diplomschrift/: Diplomschrift.docx  ~$plomschrift.docx
Dokumentation/: Aufwandsschätzung.xlsx  Projektdefinition.docx  Risikomanagement.xlsx  Stundenaufwand.xlsx  ~$Risikomanagement.xlsx  ~$ojektdefinition.docx
HaarCascade/HaarCascade/: .gitignore  HaarCascade.sln  schwammerl.xml
Kompilierungsprozess Android/: README.md
OPENCV31/: OPENCV31.VC.VC.opendb
OPENCV31/OPENCV31/: OPENCV31.vcxproj  Source.cpp  packages.config
android/scripts/: env.cmd  (+2 more)
common/: Source.cpp
iOS/: readme.md
(+115 files in other folders)
